[gd_scene load_steps=7 format=3 uid="uid://diu8f7en41r61"]

[ext_resource type="Script" path="res://Scripts/LaserPoison.gd" id="1_622nm"]
[ext_resource type="Texture2D" uid="uid://bmicm77bupuv1" path="res://Art/LaserPoison.png" id="1_dghvr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmdio"]
size = Vector2(64, 4)

[sub_resource type="Animation" id="Animation_won8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_vc3t7"]
resource_name = "rotate"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.125, 2.25, 3.375, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.5708, 3.14159, 1.5708, 0.0, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_64kiq"]
_data = {
"RESET": SubResource("Animation_won8x"),
"rotate": SubResource("Animation_vc3t7")
}

[node name="Laser" type="Area2D"]
rotation = 1.5708
scale = Vector2(20, 20)
script = ExtResource("1_622nm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dghvr")
offset = Vector2(32, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_cmdio")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_64kiq")
}
autoplay = "rotate"

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
